fix: refine assessment retake intelligence